adding eslint file and fixing syntax issues

--- a/nextjs_react/package.json
+++ b/nextjs_react/package.json
@@ -16,5 +16,13 @@
     "dev": "next",
     "build": "next build",
     "start": "next start"
+  },
+  "devDependencies": {
+    "eslint": "^7.20.0",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.2.1",
+    "react-hooks": "^1.0.1",
+    "react-performance": "^0.0.5"
   }
 }
